--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -3,11 +3,18 @@ layout: page
 title: Introduction to Vim
 minutes: 15
 ---
+## Writing files
 
-Vim is a very powerful text editor, and it offers extensive text editing options. However, in this introduction we are going to focus on exploring some basic functions. There is a lot of functionality that we are not going to cover during this session, but encourage you to go further as you become more comfortable using it. To help you remember some of the keyboard shortcuts that are introduced below and to allow you to explore additional functionality on your own, we have compiled a [cheatsheet](./VI_CommandReference.pdf).
+We've been able to do a lot of work with files that already exist, but what if we want to write our own files. Obviously, we're not going to type in a FASTA file, but you'll see as we go through other tutorials, there are a lot of reasons we'll want to write/create a file, or edit an existing file.
+
+To write in files, we're going to use a text editor called `vi`.
+
+### Introduction to Vim 
+
+Vim is a very powerful text editor, and it offers extensive text editing options. However, in this introduction we are going to focus on exploring some of the basic functions. There is a lot of functionality that we are not going to cover during this session, but encourage you to go further as you become more comfortable using it. To help you remember some of the keyboard shortcuts that are introduced below and to allow you to explore additional functionality on your own, we have compiled a [cheatsheet](./VI_CommandReference.pdf).
 
 
-> ### Which Editor? {.callout}
+> ### Which Editor?
 > 
 > When we say, "`vim` is a text editor," we really do mean "text": it can
 > only work with plain character data, not tables, images, or any other
@@ -21,17 +28,16 @@ Vim is a very powerful text editor, and it offers extensive text editing options
 
 We previously covered how to create a file in Unix using the `touch` command, but you can also create a document by calling a text editor and providing the name of the document you wish to create. To create a document in vim entitled `draft.txt`, let's type in the terminal:
 
-~~~ {.input}
- vi draft.txt
-~~~
+	vi draft.txt
 
-#### Vim Interface
+
+### Vim Interface
 Notice the `"draft.txt" [New File]` typed at the bottom left-hand section of the screen. This tells you that you just created a new file in vim. 
 
 ![screenshot-create-file](https://copy.com/BIqfxjlARvupmqbm)
 
 
-#### Vim Modes
+### Vim Modes
 Vim has **_two basic modes_** that will allow you to create documents and edit your text:   
 
 - **_command mode (default mode):_** will allow you to save and quit the program (and execute other more advanced commands).  
@@ -65,7 +71,7 @@ To edit your `draft.txt` document, open up the file again by calling vim and ent
 ![screenshot-quit](https://copy.com/UTCsBsMdGeEuEvVR)
 
 
-#### Vim Editing
+### Vim Editing
 Create the document "spider.txt" in vi. Enter the text as follows: 
 
 ![image](https://copy.com/lBAriOH4Cm34cp1M)
@@ -92,7 +98,7 @@ In addition to shortcuts for navigation, vim also offers editing shortcuts such 
 	
 Practice some of the editing shortcuts, then quit the document without saving any changes.
 
-> #### Challenge {.challenge}
+> ### Challenge 
 > We have covered some basic commands in vim, but practice is key for getting comfortable with the program. Let's
 > practice what we just learned in a brief challenge.
 > 
