--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -3,6 +3,10 @@ layout: page
 title: Introduction to Vim
 minutes: 15
 ---
+
+## Learning objectives
+
+
 ## Writing files
 
 We've been able to do a lot of work with files that already exist, but what if we want to write our own files. Obviously, we're not going to type in a FASTA file, but you'll see as we go through other tutorials, there are a lot of reasons we'll want to write/create a file, or edit an existing file.
