formatting changes for consistency

--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -1,11 +1,14 @@
 ---
-layout: page
-title: Introduction to Vim
-minutes: 15
+title: Introduction to Vim"
+author: "Mary Piper"
+date: "January 22, 2016"
 ---
 
-## Learning objectives
+Approximate time: 
 
+## Learning Objectives
+
+NEED TO ADD
 
 ## Writing files
 
@@ -102,15 +105,24 @@ In addition to shortcuts for navigation, vim also offers editing shortcuts such 
 	
 Practice some of the editing shortcuts, then quit the document without saving any changes.
 
-> **Exercise**
-> We have covered some basic commands in vim, but practice is key for getting comfortable with the program. Let's
-> practice what we just learned in a brief challenge.
-> 
-> 1. Open spider.txt, and delete the word "water" from line #2.
-> 2. Quit without saving.
-> 3. Open `spider.txt` again, and delete: "Out came the sun and dried up all the rain, and the itsy bitsy spider went up the spout again." 
-> 4. Save the file.
-> 5. Undo your previous deletion.
-> 6. Redo your previous deletion.
-> 7. Delete the first and last words from each of the lines.
-> 8. Save the file and see whether your results match your neighbors.
+*** 
+
+**Exercise**
+
+We have covered some basic commands in vim, but practice is key for getting comfortable with the program. Let's
+practice what we just learned in a brief challenge.
+
+1. Open spider.txt, and delete the word "water" from line #2.
+2. Quit without saving.
+3. Open `spider.txt` again, and delete: "Out came the sun and dried up all the rain, and the itsy bitsy spider went up the spout again." 
+4. Save the file.
+5. Undo your previous deletion.
+6. Redo your previous deletion.
+7. Delete the first and last words from each of the lines.
+8. Save the file and see whether your results match your neighbors.
+
+***
+
+---
+
+*This lesson has been developed by members of the teaching team at the [Harvard Chan Bioinformatics Core (HBC)](http://bioinformatics.sph.harvard.edu/). All instructional material is made available under the [Creative Commons Attribution license](https://creativecommons.org/licenses/by/4.0/) (CC BY 4.0).*
