Updated time and learning objectives

--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -4,11 +4,11 @@ author: "Mary Piper"
 date: "January 22, 2016"
 ---
 
-Approximate time: 
+Approximate time: 30 min
 
 ## Learning Objectives
 
-NEED TO ADD
+* Learn basic operations using the Vim text editor
 
 ## Writing files
 
