--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -14,7 +14,7 @@ Approximate time: 30 min
 
 We've been able to do a lot of work with files that already exist, but what if we want to write our own files. Obviously, we're not going to type in a FASTA file, but you'll see as we go through other tutorials, there are a lot of reasons we'll want to write/create a file, or edit an existing file.
 
-To write in files, we're going to use a text editor called `vi`.
+To write in files, we're going to use a text editor called `vim`.
 
 ### Introduction to Vim 
 
