--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -25,8 +25,7 @@ Vim is a very powerful text editor, and it offers extensive text editing options
 > 
 > When we say, "`vim` is a text editor," we really do mean "text": it can
 > only work with plain character data, not tables, images, or any other
-> media. While there are simpler editors available for use (i.e. [nano](http://www.nano-editor.org/) which is more commonly 
-> used with Software Carpentry), most computational scientists tend to favor editors that have greater functionality. 
+> media. While there are simpler editors available for use (i.e. [nano](http://www.nano-editor.org/), most computational scientists tend to favor editors that have greater functionality. 
 > Some popular editors include [Emacs](http://www.gnu.org/software/emacs/),
 > [Vim](http://www.vim.org/), or a graphical editor such as
 > [Gedit](http://projects.gnome.org/gedit/). These are editors which are generally available for use on 
