Changed vi to vim throughout and removed some content not covered in earlier lesson

--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -32,9 +32,9 @@ Vim is a very powerful text editor, and it offers extensive text editing options
 > high performance computing clusters.
 
 
-We previously covered how to create a file in Unix using the `touch` command, but you can also create a document by calling a text editor and providing the name of the document you wish to create. To create a document in vim entitled `draft.txt`, let's type in the terminal:
+You can create a file in Unix using the `touch` command, but you can also create a document by calling a text editor and providing the name of the document you wish to create. To create a document in vim entitled `draft.txt`, let's type in the terminal:
 
-	vi draft.txt
+	vim draft.txt
 
 
 ### Vim Interface
@@ -72,13 +72,13 @@ Alternatively, we can **write to file (save) and quit**. Let's do that by typing
 
 ![image](https://copy.com/Ehv0xQNIn2tCnbsm)
 
-To edit your `draft.txt` document, open up the file again by calling vim and entering the file name: `vi draft.txt`. Change to insert mode and type a few more lines (you can move around the lines using the arrows on the keyboard). This time we decide to **quit without saving** by typing `:q!`
+To edit your `draft.txt` document, open up the file again by calling vim and entering the file name: `vim draft.txt`. Change to insert mode and type a few more lines (you can move around the lines using the arrows on the keyboard). This time we decide to **quit without saving** by typing `:q!`
  
 ![screenshot-quit](https://copy.com/UTCsBsMdGeEuEvVR)
 
 
 ### Vim Editing
-Create the document "spider.txt" in vi. Enter the text as follows: 
+Create the document "spider.txt" in vim. Enter the text as follows: 
 
 ![image](https://copy.com/lBAriOH4Cm34cp1M)
 
@@ -86,7 +86,7 @@ To make it easier to refer to distinct lines, we can add line numbers by typing 
 
 ![image](https://copy.com/8EwFsrNOpLhIeFFy)
 
-While we cannot point and click to navigate the document, we can use the arrow keys to move around. Navigating with arrow keys can be very slow, so Vim has shortcuts (which are completely unituitive but very useful as you get used to them over time). Check to see what mode you are currently in. While in command mode, try moving around the screen and familarizing yourself with some of these shortcuts:    
+While we cannot point and click to navigate the document, we can use the arrow keys to move around. Navigating with arrow keys can be very slow, so Vim has shortcuts (which are completely unituitive, but very useful as you get used to them over time). Check to see what mode you are currently in. While in command mode, try moving around the screen and familarizing yourself with some of these shortcuts:    
 
 	`gg`: move to top of file  
 	`G`: move to bottom of file  
@@ -100,7 +100,7 @@ In addition to shortcuts for navigation, vim also offers editing shortcuts such 
 	`dw`: delete word 
 	`dd`: delete line  
 	`u`: undo
-	`Ctrl + u`: redo
+	`Ctrl + r`: redo
 	
 Practice some of the editing shortcuts, then quit the document without saving any changes.
 
