--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -80,7 +80,7 @@ To edit your `draft.txt` document, open up the file again by calling vim and ent
 ### Vim Editing
 Create the document "spider.txt" in vim. Enter the text as follows: 
 
-![image](https://copy.com/lBAriOH4Cm34cp1M)
+![image](../img/vim_spider.png)
 
 To make it easier to refer to distinct lines, we can add line numbers by typing `:set number`. **Save the document.** Later, if you choose to remove the line numbers you can type `:set nonumber`.
 
