Update spider.txt image

--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -84,7 +84,7 @@ Create the document "spider.txt" in vim. Enter the text as follows:
 
 To make it easier to refer to distinct lines, we can add line numbers by typing `:set number`. **Save the document.** Later, if you choose to remove the line numbers you can type `:set nonumber`.
 
-![image](https://copy.com/8EwFsrNOpLhIeFFy)
+![image](../img/vim_spider_number)
 
 While we cannot point and click to navigate the document, we can use the arrow keys to move around. Navigating with arrow keys can be very slow, so Vim has shortcuts (which are completely unituitive, but very useful as you get used to them over time). Check to see what mode you are currently in. While in command mode, try moving around the screen and familarizing yourself with some of these shortcuts:    
 
