--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -113,7 +113,7 @@ practice what we just learned in a brief challenge.
 
 1. Open spider.txt, and delete the word "water" from line #2.
 2. Quit without saving.
-3. Open `spider.txt` again, and delete: "Out came the sun and dried up all the rain, and the itsy bitsy spider went up the spout again." 
+3. Open `spider.txt` again, and delete: "Down came the rain." 
 4. Save the file.
 5. Undo your previous deletion.
 6. Redo your previous deletion.
