corrected 2 typos in vi lesson

--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -29,10 +29,10 @@ Vim is a very powerful text editor, and it offers extensive text editing options
 > Some popular editors include [Emacs](http://www.gnu.org/software/emacs/),
 > [Vim](http://www.vim.org/), or a graphical editor such as
 > [Gedit](http://projects.gnome.org/gedit/). These are editors which are generally available for use on 
-> high performance computing clusters.
+> high-performance compute clusters.
 
 
-You can create a file in Unix using the `touch` command, but you can also create a document by calling a text editor and providing the name of the document you wish to create. To create a document in vim entitled `draft.txt`, let's type in the terminal:
+You can create a file in Unix using the `touch` command, but you can also create a document by calling a text editor and providing the name of the document you wish to create. To create a document using vim entitled `draft.txt`, let's type in the terminal:
 
 	vim draft.txt
 
