--- a/sessionI/lessons/02_vi.md
+++ b/sessionI/lessons/02_vi.md
@@ -32,8 +32,10 @@ Vim is a very powerful text editor, and it offers extensive text editing options
 > high-performance compute clusters.
 
 
-You can create a document by calling a text editor and providing the name of the document you wish to create. To create a document using vim entitled `draft.txt`, type in the terminal:
+You can create a document by calling a text editor and providing the name of the document you wish to create. Change directories to the `unix_lesson` folder and create a document using vim entitled `draft.txt`:
 
+	cd ~/ngs_course/unix_lesson
+	
 	vim draft.txt
 
 
